force-app/main/default/objects/psa_Filament__c/psa_Filament__c.object-meta.xml
<CustomObject>
    <description>Printer filaments</description>
    <label>Filament</label>
    <nameField>
        <label>Filament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>