force-app/main/default/objects/psa_Filament__c/fields/Available_Qty__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty__c</fullName>
    <description>Available quantity</description>
    <label>Available Qty</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>