force-app/main/default/objects/psa_Filament__c/fields/Bed_Temp_Range__c.field-meta.xml
<CustomField>
    <fullName>Bed_Temp_Range__c</fullName>
    <description>Bed temperature range in celsius</description>
    <label>Bed Temp Range (C)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>