force-app/main/default/objects/psa_Filament__c/fields/Bed_Type__c.field-meta.xml
<CustomField>
    <fullName>Bed_Type__c</fullName>
    <description>Print bed type</description>
    <label>Bed Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Print_Bed</valueSetName>
    </valueSet>
</CustomField>