force-app/main/default/objects/psa_Filament__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Filament Color</description>
    <label>Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>