force-app/main/default/objects/psa_Filament__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manufacturer of the filament</description>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filaments</relationshipLabel>
    <relationshipName>Filaments</relationshipName>
    <type>Lookup</type>
</CustomField>