force-app/main/default/objects/psa_Filament__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Material of the filament</description>
    <label>Material</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>psa_Material</valueSetName>
    </valueSet>
</CustomField>