force-app/main/default/objects/psa_Filament__c/fields/Nozzle_Temp_Range__c.field-meta.xml
<CustomField>
    <fullName>Nozzle_Temp_Range__c</fullName>
    <description>Nozzle temperature range</description>
    <label>Nozzle Temp Range (C)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>