force-app/main/default/objects/psa_Filament__c/fields/Print_Speed__c.field-meta.xml
<CustomField>
    <fullName>Print_Speed__c</fullName>
    <description>Recommended print speed</description>
    <inlineHelpText>Some filaments have a recommended print speed</inlineHelpText>
    <label>Print Speed</label>
    <length>40</length>
    <type>Text</type>
</CustomField>