force-app/main/default/objects/psa_Filament__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <description>Filament series</description>
    <label>Series</label>
    <length>120</length>
    <type>Text</type>
</CustomField>