force-app/main/default/objects/psa_Filament__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Spool Size</description>
    <label>Size (g)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>