force-app/main/default/objects/psa_Filament__c/fields/Spool_Cost__c.field-meta.xml
<CustomField>
    <fullName>Spool_Cost__c</fullName>
    <description>Price of a spool of filament</description>
    <inlineHelpText>Enter in the cost of spool (include shipping cost if possible)</inlineHelpText>
    <label>Spool Cost</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>