force-app/main/default/objects/psa_Filament__c/fields/Spool_Weight_g__c.field-meta.xml
<CustomField>
    <fullName>Spool_Weight_g__c</fullName>
    <description>Weight of Spool</description>
    <label>Spool Weight (g)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>